# crypto-strategies

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVERSION_SUMMARY.md  CURRENCY.md  Cargo.toml  FAQ.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_STATUS.md  MULTI_TIMEFRAME_PLAN.md  README.md  REPORT.md  RUST_README.md  SECURITY.md  prompt.md  strategy.md  verify_currency_independence.py
.claude/: settings.local.json
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  QUICK_WINS.md  TRANSFORMATION_SUMMARY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  strategy_submission.md
.github/launch/: reddit_r_algotrading.md  reddit_r_rust.md
.github/workflows/: ci.yml  coverage.yml  regression-tests.yml  release.yml
configs/: best_rust_params.json  best_sharpe_2.12.json  bnb_1d.json  bollinger_test.json  btc_1d.json  btc_eth_1d.json  btc_eth_4h.json  btc_eth_sol_1d.json  btc_eth_sol_4h.json  btc_eth_sol_bnb_1d.json  btc_eth_sol_bnb_xrp_1d.json  btc_eth_sol_xrp_1d.json  btc_eth_sol_xrp_matic_1d.json  eth_1d.json  grid_trading_config.json  matic_1d.json  mean_reversion_config.json  mean_reversion_optimized.json  micro_scalper_config.json  momentum_scalper_config.json  nse_nifty_50_nifty_bank_1d.json  optimized_volatility_regime_1d.json  quick_flip_config.json  range_breakout_config.json  regime_grid_1d_config.json  regime_grid_1d_extended.json  regime_grid_1d_optimized.json  regime_grid_config.json  regime_grid_test.json  sample_config.json  simple_trend_config.json  sol_1d.json  sol_1w.json  sol_only.json  sol_only.yaml  test_monthly_matrix.json  test_no_btc.json  volatility_regime_4h_config.json  volatility_regime_config.json  vwap_scalper_config.json  (+1 more)
content/: README.md
content/blog/: README.md
content/social-media/: README.md  hackernews.md  reddit_r_algotrading.md
data/: .gitignore  BNBINR_15m.csv  BNBINR_1d.csv  BNBINR_1h.csv  BNBINR_4h.csv  BNBINR_5m.csv  BTCINR_15m.csv  BTCINR_1d.csv  BTCINR_1h.csv  BTCINR_4h.csv  BTCINR_5m.csv  DOGEINR_1d.csv  DOGEINR_4h.csv  ETHINR_15m.csv  ETHINR_1d.csv  ETHINR_1h.csv  ETHINR_4h.csv  ETHINR_5m.csv  README.md  SOLINR_15m.csv  SOLINR_1d.csv  SOLINR_1h.csv  SOLINR_4h.csv  SOLINR_5m.csv  XRPINR_15m.csv  XRPINR_1d.csv  XRPINR_1h.csv  XRPINR_4h.csv  XRPINR_5m.csv
docs/: ARCHITECTURE.md  CREATING_STRATEGIES.md  OMS_DESIGN.md
examples/custom_strategy/: README.md
py/: README.md  nse_download.py  pyproject.toml
py/src/: backtest.py  config.py  risk.py  state_manager.py  trade_visualizer.py
py/src/strategies/bollinger_reversion/: strategy.py
py/src/strategies/volatility_regime/: config.py  optimize.py  strategy.py
results/: STRATEGY_VERIFICATION.md
rust/: .gitignore  Cargo.toml  README.md  main_backtest.txt  main_vol_strategy.txt
rust/benches/: performance.rs
rust/configs/: range_breakout.json
rust/data/: BTCINR_1d.csv
rust/src/: backtest.rs  backtest.rs.backup  config.rs  data.rs  exchange.rs  grid.rs  indicators.rs  lib.rs  main.rs  monthly_pnl.rs  multi_timeframe.rs  optimizer.rs  risk.rs  state_manager.rs  types.rs
rust/tests/: integration_tests.rs  oms_integration_tests.rs
scripts/: fetch_binance_data.py  pre-commit  setup-dev.sh
src/: __init__.py  backtest.py  backtest.rs  charts.py  config.py  config.rs  data.rs  data_fetcher.py  exchange.py  exchange.rs  grid.rs  indicators.rs  lib.rs  live_trader.py  main.rs  main_backtest_cmd.rs  main_live_cmd.rs  main_live_cmd_old.rs  main_optimize_cmd.rs  monthly_pnl.rs  multi_timeframe.rs  optimize.rs  optimizer.py  optimizer.rs  risk.py  risk.rs  state_manager.py  state_manager.rs  strategy.py  strategy.rs  trade_visualizer.py  types.rs
src/binance/: mod.rs  types.rs
src/coindcx/: auth.rs  circuit_breaker.rs  client.rs  mod.rs  rate_limiter.rs  types.rs
src/commands/: backtest.rs  live.rs  (+2 more)
tests/: integration_tests.rs  oms_integration_tests.rs
(+91 files in other folders)
