[package]
name = "crypto-strategies"
version = "0.1.0"
edition = "2021"
authors = ["Prashant Srivastava"]
description = "Production-grade crypto trading strategies with backtesting and optimization"
license = "MIT"

[[bin]]
name = "backtest"
path = "src/bin/backtest.rs"

[[bin]]
name = "optimize"
path = "src/bin/optimize.rs"

[[bin]]
name = "live"
path = "src/bin/live.rs"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Data processing
polars = { version = "0.44", features = ["lazy", "csv", "temporal", "dtype-date"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for exchange API
reqwest = { version = "0.12", features = ["json"] }

# CLI and logging
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Numerical computations
statrs = "0.17"

# Parallelization
rayon = "1.10"

# Configuration
dotenv = "0.15"

# Crypto for API signatures
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

[dev-dependencies]
approx = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
