[package]
name = "crypto-strategies"
version = "0.1.0"
edition = "2021"
authors = ["Prashant Srivastava"]
description = "Crypto trading strategies with backtesting, optimization, and live trading"
license = "MIT"

[[bin]]
name = "crypto-strategies"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Data processing
polars = { version = "0.44", features = ["lazy", "csv", "temporal", "dtype-date"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for exchange API
reqwest = { version = "0.12", features = ["json"] }

# CLI and logging
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi", "json"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Numerical computations
statrs = "0.17"

# Parallelization and progress
rayon = "1.10"
indicatif = { version = "0.17", features = ["rayon"] }

# Utilities
itertools = "0.13"

# Database for state management
rusqlite = { version = "0.32", features = ["bundled"] }

# Configuration
dotenv = "0.15"

# Crypto for API signatures
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

[dev-dependencies]
approx = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
