[project]
name = "coindcx-volatility-regime-strategy"
version = "0.1.0"
description = "Volatility Regime Adaptive Trading Strategy for CoinDCX"
authors = [{ name = "Prashant Srivastava" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "backtrader>=1.9.78.123",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.11.0",
    "ta>=0.11.0",
    "seaborn>=0.13.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
backtest = "src.backtest:main"
live = "src.live_trader:main"
fetch-data = "src.data_fetcher:main"
optimize = "src.optimizer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
